--- a/index.html
+++ b/index.html
@@ -8,32 +8,38 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="style.css" />
   <title>My Work Portfolio</title>
 </head>
 
 <body>
 
-  <nav class="navbar" id="myNavBar">
-    <div class="w3-bar w3-light-grey ">
-      <div class="nav w3-right">
-        <a href="#Home" class="w3-bar-item w3-button w3-hide-small w3-hover-green">Home</a>
-        <a href="#About" class="w3-bar-item w3-button w3-hide-small w3-hover-green ">About</a>
-        <a href="#Work" class="w3-bar-item w3-button w3-hide-small w3-hover-green">Work</a>
-        <a href="#Contact" class="w3-bar-item w3-button w3-hide-small w3-hover-green">Contacts</a>
-        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-hide-large w3-hide-medium w3-right"
-          onclick="myNav()">&#9776;</a>
-      </div>
-
-    </div>
-
-    <div id="demo" class="mybar  w3-bar-block w3-red w3-hide w3-hide-large w3-hide-medium" style="margin-top:46px">
-      <a href="#Home" class="w3-bar-item w3-button" onclick="myNav()">Home</a>
-      <a href="#About" class="w3-bar-item w3-button" onclick="myNav()">About</a>
-      <a href="#Work" class="w3-bar-item w3-button" onclick="myNav()">Work</a>
-      <a href="#Contact" class="w3-bar-item w3-button" onclick="myNav()">Contact</a>
+  <!--Navigation-->
+  <nav class="navbar navbar-expand-md  bg-dark navbar-dark fixed-top">
+    <a class="navbar-brand" href="#">
+      <img src="img/javascript.png" alt="Logo" style="width:40px;" />
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#Home">Homes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#About">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Contact">Contact</a>
+        </li>
+      </ul>
     </div>
   </nav>
   <!--Home-->
@@ -78,7 +84,8 @@
             on enhancing my skills in HTML5,CSS, and JavaScript through creating real life and
             problem solving projects.
           </span>
-          <button onclick="myFunction()" id="myBtn">Read more</button>
+          <button type="button" class="btn btn-info" id="myBtn" onclick="myFunction()">Read more</button>
+
 
         </p>
 
@@ -106,7 +113,8 @@
           <div data-iframe-width="150" data-iframe-height="270"
             data-share-badge-id="f070b382-94d7-4487-8ded-f9dde3067a6c">
           </div>
-          <script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+          <script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js" Samesite=none>
+          </script>
         </div>
         <!--Html and CSS-->
         <div class="skill-card">
@@ -121,7 +129,7 @@
 
   </section>
   <!--Work-->
-  <section class="Work" id="Work">
+  <section class="Work" id="Projects">
     <div class="container">
       <h1 class="lg-heading">My <span class="text-secondary">Work</span></h1>
       <h2 class="sm-heading">Check out some of my projects...</h2>
@@ -213,11 +221,11 @@
 
       <div class="boxes">
         <div>
-          <span class="text-secondary">Email:<a
+          <span class="text-secondary">Emails:<a
               href="https://mail.google.com/mail/?view=cm&ui=2&tf=0&fs=1&to=bongiwemoale@gmail.com&" target="_blank"
               data-toggle="tooltip" data-placement="bottom" title="Click to email me">bongiwemoale@gmail.com</a>
         </div>
-        <div><span class="text-secondary">Phone:</span><a href="!">
+        <div><span class="text-secondary">Phones:</span><a href="tel:+2763-7799-696">
             <img src="img//za.svg" alt="South Africa" style="width: 40px" , height="20px" />
             +277799696</div>
         <div>
@@ -247,6 +255,14 @@
       });
     }
   </script>
+  <script>
+    //same-site cookies
+    document.cookie = 'same-site-cookie=foo; SameSite=Lax';
+    document.cookie = 'cross-site-cookie=bar; SameSite=None; Secure';
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="app.js">
   </script>
 
