--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <!--Navigation-->
-  <nav class="navbar navbar-expand-md  bg-dark navbar-light fixed-top">
+  <nav class="navbar navbar-expand-md  bg-info navbar-light fixed-top">
     <a class="navbar-brand" href="#">
       <img src="img/javascript.png" alt="Logo" style="width:40px;" />
     </a>
@@ -252,6 +252,25 @@
         });
       });
     }
+  </script>
+  <script type="text/javascript">
+    window.onerror = function (msg, url, line, col, error) {
+      // Note that col & error are new to the HTML 5 spec and may not be 
+      // supported in every browser.  It worked for me in Chrome.
+      var extra = !col ? '' : '\ncolumn: ' + col;
+      extra += !error ? '' : '\nerror: ' + error;
+
+      // You can view the information in an alert to see things working like this:
+      alert("Error: " + msg + "\nurl: " + url + "\nline: " + line + extra);
+
+      // TODO: Report this error via ajax so you can keep track
+      //       of what pages have JS issues
+
+      var suppressErrorAlert = true;
+      // If you return true, then error alerts (like in older versions of 
+      // Internet Explorer) will be suppressed.
+      return suppressErrorAlert;
+    };
   </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
